--- a/inplace/pubspec.yaml
+++ b/inplace/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
+  animated_theme_switcher: ^2.0.6
   
 
 dev_dependencies:
