--- a/inplace/pubspec.yaml
+++ b/inplace/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   cloud_firestore: ^3.4.9
   provider: ^6.0.3
   firebase_ui_auth: ^1.0.0-dev.0
+  google_maps_flutter: ^2.2.0
+  google_maps_flutter_web: ^0.4.0+2
 
 dev_dependencies:
   flutter_test:
