added dynamic location change

--- a/inplace/android/app/build.gradle
+++ b/inplace/android/app/build.gradle
@@ -37,6 +37,9 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    // For GPS
+    compileSdkVersion 33
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
