--- a/inplace/android/app/src/main/AndroidManifest.xml
+++ b/inplace/android/app/src/main/AndroidManifest.xml
@@ -34,4 +34,8 @@
          <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="YOUR_API_KEY"/>
     </application>
+
+    <!-- For GPS permissions -->	
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />	
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 </manifest>
