--- a/inplace/pubspec.yaml
+++ b/inplace/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_ui_auth: ^1.0.0-dev.0
   google_maps_flutter: ^2.2.0
   google_maps_flutter_web: ^0.4.0+2
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
