Now cluster stuff works

--- a/inplace/android/app/src/main/AndroidManifest.xml
+++ b/inplace/android/app/src/main/AndroidManifest.xml
@@ -30,9 +30,9 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-        <!-- For Google Maps in the application -->
+        <!-- API KEY For Google Maps in the application -->
          <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_API_KEY"/>
+            android:value="TOUR_API_KEY"/>
     </application>
 
     <!-- For GPS permissions -->	
