--- a/inplace/android/app/src/main/AndroidManifest.xml
+++ b/inplace/android/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             android:value="2" />
         <!-- API KEY For Google Maps in the application -->
          <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="TOUR_API_KEY"/>
+            android:value="YOUR_API_KEY"/>
     </application>
 
     <!-- For GPS permissions -->	
