--- a/inplace/pubspec.yaml
+++ b/inplace/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   google_maps_flutter: ^2.2.0
   google_maps_flutter_web: ^0.4.0+2
   geolocator: ^9.0.2
+  sensors_plus: ^2.0.1
+  flutter_compass: ^0.7.0
 
 dev_dependencies:
   flutter_test:
