--- a/inplace/android/app/build.gradle
+++ b/inplace/android/app/build.gradle
@@ -56,7 +56,7 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
-        minSdkVersion 23//21
+        minSdkVersion 21
         multiDexEnabled true
     }
 
