--- a/inplace/pubspec.yaml
+++ b/inplace/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   google_maps_flutter: ^2.2.0
   google_maps_flutter_web: ^0.4.0+2
   geolocator: ^9.0.2
+  flutter_compass: ^0.7.0
 
 dev_dependencies:
   flutter_test:
@@ -70,10 +71,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/compass.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+      
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
