--- a/inplace/pubspec.yaml
+++ b/inplace/pubspec.yaml
@@ -72,6 +72,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/compass.png
+    - assets/compass_background.png
+    - assets/compass_needle.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
       
