--- a/inplace/android/app/src/main/AndroidManifest.xml
+++ b/inplace/android/app/src/main/AndroidManifest.xml
@@ -25,14 +25,14 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <!-- Don't delete the meta-data below.
+        <!-- Don"t delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
         <!-- API KEY For Google Maps in the application -->
          <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_API_KEY"/>
+            android:value="AIzaSyATX7RCrR2-Y_kDt9yLQwH-MX2xGaF_rIU"/>
     </application>
 
     <!-- For GPS permissions -->	
